--- a/Aulas/aula_06/loja-games-front/src/app/components/views/cadastro/cadastro.component.html
+++ b/Aulas/aula_06/loja-games-front/src/app/components/views/cadastro/cadastro.component.html
@@ -1,7 +1,5 @@
+<app-navbar></app-navbar>
 <form>
-    <input type="number" name="primeiro-campo" id="id"
-    [(ngModel)]="jogo.id" placeholder="Id do jogo">
-
     <input type="text" name="segundo-campo" id="imagem"
     [(ngModel)]="jogo.imagem" placeholder="Imagem do jogo">
 
