--- a/Aulas/aula_06/loja-games-front/src/app/components/shared/card/card.component.css
+++ b/Aulas/aula_06/loja-games-front/src/app/components/shared/card/card.component.css
@@ -1,6 +1,24 @@
+.container {
+    margin-top: 20px;
+}
+
 .favoritar {
     font-size: 19px;
     color: gray;
+    cursor: pointer;
+}
+
+.x-circle {
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+    position: absolute;
+    top: 18px;
+    left: 35px;
+    z-index: 1;
+}
+
+.x-circle:hover {
+    color: red;
     cursor: pointer;
 }
 
@@ -12,3 +30,8 @@
     color: red;
     cursor: pointer;
 }
+
+.btn-primary{
+    margin-left: 90px;
+}
+
