--- a/Aulas/aula_06/loja-games-front/src/app/components/views/home/home.component.html
+++ b/Aulas/aula_06/loja-games-front/src/app/components/views/home/home.component.html
@@ -1,3 +1,7 @@
+<app-navbar></app-navbar>
+
+<app-modal-exclusao></app-modal-exclusao>
+
 <div class="container">
     <div class="row d-flex justify-content-center">
         <div class="col-md-4 mb-5" *ngFor="let jogo of jogos">
